fixed gap

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Prompt:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Prompt:wght@500&display=swap");
 
 .wrapper {
   width: 100%;
@@ -8,8 +8,13 @@
 }
 .banner {
   object-fit: cover;
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.6) 100%),
-    url('./img/main-banner.png'), lightgray 0px -1084.455px / 100% 529.903% no-repeat;
+  background: linear-gradient(
+      180deg,
+      rgba(0, 0, 0, 0) 0%,
+      rgba(0, 0, 0, 0.6) 100%
+    ),
+    url("./img/main-banner.png"),
+    lightgray 0px -1084.455px / 100% 529.903% no-repeat;
   width: 100%;
 }
 h1 {
@@ -108,12 +113,12 @@ h1 {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
-    gap: 20px 20px;
+    gap: 3.9% 3.9%;
     grid-auto-flow: row;
     grid-template-areas:
-      '. . . .'
-      '. . . .'
-      '. . . .';
+      ". . . ."
+      ". . . ."
+      ". . . .";
   }
 
   .card {
